[package]
name = "wfc-tiled-amethyst"
version = "0.1.0"
authors = ["reasv <7143787+reasv@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wfc = "0.8.1"
image = "0.21"
coord_2d = "0.2"
grid_2d = "0.12"
rand = "0.6"
direction = "0.17"